<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".singleplayerActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/singlePlayerButton"
        android:textColor="#00FF08"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/WordToBeGuessed"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="232dp"
        android:background="#00FF08"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/gallows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/gallows"
        android:scaleType="center"
        android:src="@drawable/hangman_gallow"
        app:layout_constraintBottom_toTopOf="@+id/userGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/head"
        android:layout_width="112dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/head"
        android:src="@drawable/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="@+id/gallows"
        app:layout_constraintTop_toTopOf="@+id/gallows" />

    <ImageView
        android:id="@+id/body"
        android:layout_width="109dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/body"
        android:src="@drawable/body"
        app:layout_constraintBottom_toBottomOf="@+id/gallows"
        app:layout_constraintEnd_toEndOf="@+id/gallows"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="@+id/gallows"
        app:layout_constraintTop_toTopOf="@+id/head"
        app:layout_constraintVertical_bias="0.21" />

    <ImageView
        android:id="@+id/arm1"
        android:layout_width="55dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/arm"
        android:src="@drawable/left_arm"
        app:layout_constraintBottom_toTopOf="@+id/WordToBeGuessed"
        app:layout_constraintEnd_toEndOf="@+id/gallows"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="@+id/gallows" />

    <ImageView
        android:id="@+id/arm2"
        android:layout_width="55dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/arm"
        android:src="@drawable/right_arm"
        app:layout_constraintBottom_toTopOf="@+id/WordToBeGuessed"
        app:layout_constraintEnd_toEndOf="@+id/gallows"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="@+id/gallows"
        app:layout_constraintTop_toTopOf="@+id/gallows"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/leg1"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/leg"
        android:src="@drawable/left_leg"
        app:layout_constraintBottom_toTopOf="@+id/WordToBeGuessed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintVertical_bias="0.37" />

    <ImageView
        android:id="@+id/leg2"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/leg"
        android:src="@drawable/right_leg"
        app:layout_constraintBottom_toTopOf="@+id/WordToBeGuessed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/wordsGuessed"
        android:layout_width="162dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FF08"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/reset_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FF08"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:autofillHints="Enter letters here"
        android:hint=""
        app:layout_constraintBottom_toTopOf="@+id/wordsGuessed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WordToBeGuessed"  />


</android.support.constraint.ConstraintLayout>